litecoin: update deploy files

--- a/deploy/etc/logrotate.conf
+++ b/deploy/etc/logrotate.conf
@@ -8,7 +8,7 @@
   copytruncate
 }
 
-/home/bitcoin/.bitcoin/debug.log
+/home/litecoin/.litecoin/debug.log
 {
         rotate 4
         weekly
@@ -20,7 +20,7 @@
         sharedscripts
 }
 
-/home/bitcoin/.bitcoin2/debug.log
+/home/litecoin/.litecoin2/debug.log
 {
         rotate 4
         weekly
@@ -32,7 +32,7 @@
         sharedscripts
 }
 
-/home/bitcoin/.bitcoin/testnet3/debug.log
+/home/litecoin/.litecoin/testnet4/debug.log
 {
         rotate 4
         weekly
@@ -44,7 +44,7 @@
         sharedscripts
 }
 
-/home/bitcoin/.bitcoin2/testnet3/debug.log
+/home/litecoin/.litecoin2/testnet4/debug.log
 {
         rotate 4
         weekly
